[package]
name = "ofd2img"
version = "0.1.0"
edition = "2024"
authors = ["xuyd <sssxyd@gmail.com>"]
repository = "https://github.com/sssxyd/rust-ofd2img"
license = "Apache-2.0"

[profile.dev]
panic = "unwind"

[dependencies]
cairo-rs = { version = "0.20.7", features = ["png"]}
env_logger = "0.11.7"
image = { version = "0.25.5", features = ["jpeg", "webp", "png"]}
log = { version = "0.4.26", features = ["kv"]}
serde = { version = "1.0.219", features = ["derive"]}
serde-xml-rs = "0.6.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
zip = "2.5.0"
